--- a/client/src/app/student-home/student-home.component.scss
+++ b/client/src/app/student-home/student-home.component.scss
@@ -3,3 +3,25 @@ a.disabled {
   cursor: default;
   color: #aaaaaa;
 }
+
+.trigger-button {
+  color: #000;
+}
+
+.trigger-button-open {
+  transform: rotate(90deg);
+}
+
+.trigger-button-closed {
+  transform: rotate(270deg);
+}
+
+.hide-tutorial {
+  flex: 0 0 3rem;
+  max-width: 3rem;
+}
+
+.editor-full {
+  flex: 0 0 calc(100% - 3rem);
+  max-width: calc(100% - 3rem);
+}
