Started adding robot types.

--- a/client/src/app/user-settings/user-settings.component.html
+++ b/client/src/app/user-settings/user-settings.component.html
@@ -1,4 +1,4 @@
-<clr-modal [(clrModalOpen)]="opened" [clrModalStaticBackdrop]="false" [clrModalSize]="'lg'">
+<clr-modal [(clrModalOpen)]="opened" [clrModalStaticBackdrop]="false" [clrModalSize]="'xl'">
     <h3 class="modal-title">Settings</h3>
     <div class="modal-body">
         <form clrForm>
