--- a/client/src/app/user-settings-editor/user-settings-editor.component.html
+++ b/client/src/app/user-settings-editor/user-settings-editor.component.html
@@ -1,40 +1,52 @@
-<clr-toggle-container>
-    <label>Interface Style</label>
-    <clr-toggle-wrapper>
-        <input type="checkbox" clrToggle name="default" value="true" [(ngModel)]="interfaces.default" />
-        <label>Default Blocks</label>
-    </clr-toggle-wrapper>
-    <clr-toggle-wrapper>
-        <input type="checkbox" clrToggle name="simple" value="true" [(ngModel)]="interfaces.simple" />
-        <label>Simple Blocks Only</label>
-    </clr-toggle-wrapper>
-    <clr-toggle-wrapper>
-        <input type="checkbox" clrToggle name="events" value="true" [(ngModel)]="interfaces.events" />
-        <label>Require Events</label>
-    </clr-toggle-wrapper>
-    <clr-control-helper>The type of block interface to use</clr-control-helper>
-</clr-toggle-container>
-<clr-toggle-container>
-    <label>Categories</label>
-    <clr-toggle-wrapper>
-        <input type="checkbox" clrToggle name="dances" value="true" [(ngModel)]="settings.dances" />
-        <label>Dances</label>
-    </clr-toggle-wrapper>
-    <clr-toggle-wrapper>
-        <input type="checkbox" clrToggle name="conditionals" value="true" [(ngModel)]="settings.conditionals" />
-        <label>Conditionals</label>
-    </clr-toggle-wrapper>
-    <clr-toggle-wrapper>
-        <input type="checkbox" clrToggle name="loops" value="true" [(ngModel)]="settings.loops" />
-        <label>Loops</label>
-    </clr-toggle-wrapper>
-    <clr-toggle-wrapper>
-        <input type="checkbox" clrToggle name="sensors" value="true" [(ngModel)]="settings.sensors" />
-        <label>Sensors</label>
-    </clr-toggle-wrapper>
-    <clr-toggle-wrapper>
-        <input type="checkbox" clrToggle name="variables" value="true" [(ngModel)]="settings.variables" />
-        <label>Variables</label>
-    </clr-toggle-wrapper>
-    <clr-control-helper>Which categories of block to display</clr-control-helper>
-</clr-toggle-container>
+<div style="column-count: 2;">
+    <clr-select-container>
+        <label>Robot Type</label>
+        <select clrSelect name="robotType" [(ngModel)]="settings.robotType" required>
+            <option value="one">Nao</option>
+            <option value="two">Turtlebot</option>
+        </select>
+        <clr-control-helper>The type of robot to program</clr-control-helper>
+    </clr-select-container>
+    <div style="break-inside: avoid;">
+        <clr-toggle-container>
+            <label>Interface Style</label>
+            <clr-toggle-wrapper>
+                <input type="checkbox" clrToggle name="default" value="true" [(ngModel)]="interfaces.default" />
+                <label>Default Blocks</label>
+            </clr-toggle-wrapper>
+            <clr-toggle-wrapper>
+                <input type="checkbox" clrToggle name="simple" value="true" [(ngModel)]="interfaces.simple" />
+                <label>Simple Blocks Only</label>
+            </clr-toggle-wrapper>
+            <clr-toggle-wrapper>
+                <input type="checkbox" clrToggle name="events" value="true" [(ngModel)]="interfaces.events" />
+                <label>Require Events</label>
+            </clr-toggle-wrapper>
+            <clr-control-helper>The type of block interface to use</clr-control-helper>
+        </clr-toggle-container>
+    </div>
+    <clr-toggle-container>
+        <label>Categories</label>
+        <clr-toggle-wrapper>
+            <input type="checkbox" clrToggle name="dances" value="true" [(ngModel)]="settings.dances" />
+            <label>Dances</label>
+        </clr-toggle-wrapper>
+        <clr-toggle-wrapper>
+            <input type="checkbox" clrToggle name="conditionals" value="true" [(ngModel)]="settings.conditionals" />
+            <label>Conditionals</label>
+        </clr-toggle-wrapper>
+        <clr-toggle-wrapper>
+            <input type="checkbox" clrToggle name="loops" value="true" [(ngModel)]="settings.loops" />
+            <label>Loops</label>
+        </clr-toggle-wrapper>
+        <clr-toggle-wrapper>
+            <input type="checkbox" clrToggle name="sensors" value="true" [(ngModel)]="settings.sensors" />
+            <label>Sensors</label>
+        </clr-toggle-wrapper>
+        <clr-toggle-wrapper>
+            <input type="checkbox" clrToggle name="variables" value="true" [(ngModel)]="settings.variables" />
+            <label>Variables</label>
+        </clr-toggle-wrapper>
+        <clr-control-helper>Which categories of block to display</clr-control-helper>
+    </clr-toggle-container>
+</div>
