--- a/client/src/app/student-home/student-home.component.html
+++ b/client/src/app/student-home/student-home.component.html
@@ -20,6 +20,7 @@
             <a href="..." class="nav-link">
                 <img src="assets/nao.svg" style="width: 32px; margin-right: 1em;">
                 <span class="title">NaoBlocks</span>
+                <span class="subtitle">[{{editorSettings.user.robotType}}]</span>
             </a>
         </div>
         <div class="header-actions">
