--- a/client/src/app/robot-editor/robot-editor.component.html
+++ b/client/src/app/robot-editor/robot-editor.component.html
@@ -1,4 +1,17 @@
 <form clrForm>
+    <div class="alert alert-warning" role="alert" *ngIf="!robot.isInitialised">
+        <div class="alert-items">
+            <div class="alert-item static">
+                <div class="alert-icon-wrapper">
+                    <clr-icon class="alert-icon" shape="exclamation-triangle"></clr-icon>
+                </div>
+                <span class="alert-text">
+                    This robot has not been initialised yet. 
+                    Please set the password to initialise the robot.
+                </span>
+            </div>
+        </div>
+    </div>
     <clr-input-container>
         <label class="clr-col-12 clr-col-md-2">Machine Name:</label>
         <input class="clr-col-12 clr-col-md-10" clrInput type="text" [(ngModel)]="robot.machineName" name="machineName"
@@ -14,6 +27,14 @@
         <clr-control-helper>The human understandable name of the robot, should be unique.</clr-control-helper>
         <clr-control-error>Friendly name is missing</clr-control-error>
     </clr-input-container>
+    <clr-select-container>
+        <label>Robot Type</label>
+        <select clrSelect name="robotType" [(ngModel)]="robot.type">
+            <option value="{{robotType.name}}" *ngFor="let robotType of types">{{robotType.name}}</option>
+        </select>
+        <clr-control-helper>The type of robot. This setting defines what functionality is available for the robot.
+        </clr-control-helper>
+    </clr-select-container>
     <clr-toggle-wrapper class="clr-offset-md-2" style="margin-top: 1em;" *ngIf="!robot.isNew">
         <input type="checkbox" clrToggle value="true" name="changePassword" [(ngModel)]="showPassword" />
         <label>Change Password</label>
