Display alert if the system/user not initialised

--- a/client/src/app/admin-home/admin-home.component.html
+++ b/client/src/app/admin-home/admin-home.component.html
@@ -53,12 +53,12 @@
                 <a href="javascript://" class="nav-link" [class.active]="currentView=='logs'" (click)="changeView('logs')">
                     Logs
                 </a>
-                <a href="javascript://" class="nav-link" [class.active]="currentView=='settings'" (click)="changeView('settings')">
+                <!-- <a href="javascript://" class="nav-link" [class.active]="currentView=='settings'" (click)="changeView('settings')">
                     Settings
                 </a>
                 <a href="javascript://" class="nav-link" [class.active]="currentView=='users'" (click)="changeView('users')">
                     Users
-                </a>
+                </a> -->
             </section>
         </nav>
     </div>
