--- a/client/src/app/student-home/student-home.component.html
+++ b/client/src/app/student-home/student-home.component.html
@@ -13,6 +13,33 @@
         </div>
     </div>
 </div>
+<div class="alert alert-app-level alert-danger" role="alert" *ngIf="editorSettings.isLoaded && !editorSettings.isSystemInitialised">
+    <div class="alert-items">
+        <div class="alert-item static">
+            <div class="alert-icon-wrapper">
+                <clr-icon class="alert-icon" shape="exclamation-circle"></clr-icon>
+            </div>
+            <div class="alert-text">
+                The system has not been completely initialised - there is no default robot type
+            </div>
+        </div>
+    </div>
+</div>
+<div class="alert alert-app-level alert-warning" role="alert" *ngIf="editorSettings.isLoaded && !editorSettings.user.robotType">
+    <div class="alert-items">
+        <div class="alert-item static">
+            <div class="alert-icon-wrapper">
+                <clr-icon class="alert-icon" shape="exclamation-triangle"></clr-icon>
+            </div>
+            <div class="alert-text">
+                You have not selected a robot type yet
+            </div>
+            <div class="alert-actions">
+                <button class="btn alert-action" (click)="showSettings()">Settings</button>
+            </div>
+        </div>
+    </div>
+</div>
 <div class="main-container">
     <app-heartbeat></app-heartbeat>
     <header class="header-4">
@@ -20,7 +47,8 @@
             <a href="..." class="nav-link">
                 <img src="assets/nao.svg" style="width: 32px; margin-right: 1em;">
                 <span class="title">NaoBlocks</span>
-                <span class="subtitle">[{{editorSettings.user.robotType}}]</span>
+                <span class="subtitle"
+                    *ngIf="editorSettings.isLoaded && editorSettings.user.robotType">[{{editorSettings.user.robotType}}]</span>
             </a>
         </div>
         <div class="header-actions">
@@ -30,7 +58,7 @@
                     {{currentUser ? currentUser.name : ''}}
                     <clr-icon shape="caret down"></clr-icon>
                 </button>
-                    <clr-dropdown-menu *clrIfOpen clrPosition="bottom-right">
+                <clr-dropdown-menu *clrIfOpen clrPosition="bottom-right">
                     <a href="javascript://" clrDropdownItem (click)="showSettings()">Settings</a>
                     <a href="javascript://" clrDropdownItem (click)="changeRole()" *ngIf="canChangeRole()">Change
                         Role</a>
