--- a/client/src/app/student-editor/student-editor.component.html
+++ b/client/src/app/student-editor/student-editor.component.html
@@ -5,6 +5,21 @@
         <clr-control-helper>The name of the student, must be unique.</clr-control-helper>
         <clr-control-error>Student name is missing</clr-control-error>
     </clr-input-container>
+    <clr-input-container>
+        <label class="clr-col-12 clr-col-md-2">Age:</label>
+        <input class="clr-col-12 clr-col-md-10" clrInput type="number" [(ngModel)]="student.age" name="age" min="1" max="120" />
+        <clr-control-helper>The student's age, used in data analysis.</clr-control-helper>
+    </clr-input-container>
+    <clr-input-container>
+        <label class="clr-col-12 clr-col-md-2">Gender:</label>
+        <select class="clr-col-12 clr-col-md-10" clrInput type="text" [(ngModel)]="student.gender" name="gender">
+            <option>Male</option>
+            <option>Female</option>
+            <option>Other</option>
+            <option>Unknown</option>
+        </select>
+        <clr-control-helper>The student's gender, used in data analysis.</clr-control-helper>
+    </clr-input-container>
     <clr-toggle-wrapper class="clr-offset-md-2" style="margin-top: 1em;" *ngIf="!student.isNew">
         <input type="checkbox" clrToggle value="true" name="changePassword" [(ngModel)]="showPassword" />
         <label>Change Password</label>
