--- a/client/src/app/users-list/users-list.component.html
+++ b/client/src/app/users-list/users-list.component.html
@@ -1,1 +1,79 @@
-<p>users-list works!</p>
+<div *ngIf="isInList">
+    <clr-datagrid [(clrDgSelected)]="selected" [clrDgLoading]="isLoading">
+        <clr-dg-action-bar>
+            <div class="btn-group">
+                <button type="button" class="btn btn-sm btn-secondary" (click)="doAddNew()">
+                    <clr-icon shape="plus"></clr-icon> Add New
+                </button>
+                <button type="button" class="btn btn-sm btn-secondary" (click)="doEdit()"
+                    [disabled]="selected.length !== 1">
+                    <clr-icon shape="pencil"></clr-icon> Edit
+                </button>
+                <button type="button" class="btn btn-sm btn-secondary" (click)="doDelete()"
+                    [disabled]="selected.length === 0">
+                    <clr-icon shape="close"></clr-icon> Delete
+                </button>
+            </div>
+            <div class="btn-group">
+                <clr-dropdown>
+                    <button type="button" class="btn btn-sm btn-secondary" clrDropdownTrigger>
+                        Export
+                        <clr-icon shape="caret down"></clr-icon>
+                    </button>
+                    <clr-dropdown-menu clrPosition="bottom-left" *clrIfOpen>
+                        <button type="button" (click)="doExportList()" clrDropdownItem>
+                            List
+                        </button>
+                    </clr-dropdown-menu>
+                </clr-dropdown>
+            </div>
+        </clr-dg-action-bar>
+
+        <clr-dg-column [clrDgField]="'name'">Name</clr-dg-column>
+        <clr-dg-column [clrDgField]="'whenAdded'">When Added</clr-dg-column>
+
+        <clr-dg-row *clrDgItems="let user of users.items" [clrDgItem]="user">
+            <clr-dg-cell>{{user.name}}</clr-dg-cell>
+            <clr-dg-cell>{{user.whenAdded | date}}</clr-dg-cell>
+        </clr-dg-row>
+
+        <clr-dg-footer>{{users.count}} users</clr-dg-footer>
+
+        <clr-dg-placeholder>We couldn't find any users</clr-dg-placeholder>
+    </clr-datagrid>
+
+    <div class="alert alert-danger" role="alert" *ngIf="errorMessage">
+        <div class="alert-items">
+            <div class="alert-item static">
+                <div class="alert-icon-wrapper">
+                    <clr-icon class="alert-icon" shape="exclamation-circle"></clr-icon>
+                </div>
+                <span class="alert-text">
+                    {{errorMessage}}
+                </span>
+            </div>
+        </div>
+        <button type="button" class="close" aria-label="Close" (click)="errorMessage=undefined">
+            <clr-icon aria-hidden="true" shape="close"></clr-icon>
+        </button>        
+    </div>
+
+    <div class="alert alert-success" role="alert" *ngIf="message">
+        <div class="alert-items">
+            <div class="alert-item static">
+                <div class="alert-icon-wrapper">
+                    <clr-icon class="alert-icon" shape="check-circle"></clr-icon>
+                </div>
+                <span class="alert-text">
+                    {{message}}
+                </span>
+            </div>
+        </div>
+        <button type="button" class="close" aria-label="Close" (click)="message=undefined">
+            <clr-icon aria-hidden="true" shape="close"></clr-icon>
+        </button>        
+    </div>
+</div>
+<div *ngIf="isInEditor">
+    <app-user-editor [user]="currentUser" (closed)="onClosed($event)"></app-user-editor>
+</div>
