--- a/client/src/app/teacher-home/teacher-home.component.html
+++ b/client/src/app/teacher-home/teacher-home.component.html
@@ -42,6 +42,7 @@
         <div class="content-area">
             <app-students-list *ngIf="currentView=='students'"></app-students-list>
             <app-robots-list *ngIf="currentView=='robots'"></app-robots-list>
+            <app-robot-configuration *ngIf="currentView=='configuration'"></app-robot-configuration>
         </div>
         <nav class="sidenav">
             <section class="sidenav-content">
@@ -50,6 +51,9 @@
                 </a>
                 <a href="javascript://" class="nav-link" [class.active]="currentView=='robots'" (click)="changeView('robots')">
                     Robots
+                </a>
+                <a href="javascript://" class="nav-link" [class.active]="currentView=='configuration'" (click)="changeView('configuration')">
+                    Configuration
                 </a>
             </section>
         </nav>
